# langchain-in-action

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
agent_framework/: README.md  __init__.py
agent_framework/agents/: __init__.py  factory.py
agent_framework/examples/: 01_basic_agent.py  02_file_agent.py  __init__.py
agent_framework/tests/: verify_model.py
agent_framework/tools/: __init__.py  basic.py
agent_framework/utils/: __init__.py
docs/: AGENT_CONCEPTS.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LEARNING_PATH.md  PACKAGE_GUIDE.md  PROJECT_ROADMAP.md  README.md  SKILL_CARD_GUIDE.md  static-vs-dynamic.md
docs/financial/: README.md  architecture.md
docs/implementation/: 01-project-setup.md  03-schedule-tools.md  04-skill-card-executor.md  04-testing.md  05-todo-manager-agent.md  06-knowledge-manager-agent.md  07-supervisor-agent.md  08-fastapi-integration.md  09-implementation-pending.md  10-implementation-pending.md  11-implementation-pending.md  12-implementation-pending.md  13-implementation-pending.md  14-implementation-pending.md  15-implementation-pending.md  16-implementation-pending.md  17-implementation-pending.md
docs/personal-assistant/: README.md  concepts.md  implementation-guide.md  roadmap.md
docs/personal-assistant/step-by-step/: 02-schedule-manager.md  03-skill-card-system.md  README.md  step-07-langgraph-supervisor.md
src/: README.md  __init__.py
src/agents/: __init__.py  factory.py
src/core/: __init__.py
src/core/agents/: __init__.py  base.py  factory.py
src/core/middleware/: audit_logging.py  pii_detection.py
src/core/skill_cards/: __init__.py  executor.py  manager.py  schema.py
src/core/tools/: __init__.py  basic.py  file_tools.py
src/core/utils/: __init__.py  config.py
src/examples/: 01_basic_agent.py  02_file_agent.py  03_schedule_agent.py  04_middleware_demo.py  05_skill_card_demo.py  06_simple_llm.py  07_executor_demo.py  08_real_tools_demo.py  09_dynamic_agent.py  10_langgraph_supervisor.py  13_elasticsearch_demo.py  14_redis_demo.py
src/financial/: __init__.py
src/financial/database/: __init__.py
src/financial/skill_cards/: __init__.py
src/multi_agent_lab/core/agents/: base.py
src/multi_agent_lab/core/middleware/: __init__.py  audit_logging.py  base.py  pii_detection.py
src/multi_agent_lab/domains/personal_assistant/: __init__.py  (+1 more)
src/personal_assistant/: __init__.py
src/personal_assistant/agents/: __init__.py  schedule_manager.py
src/personal_assistant/database/: __init__.py  memory_db.py
src/personal_assistant/models/: __init__.py  event.py
src/personal_assistant/skill_cards/: __init__.py  schedule_card.json
src/personal_assistant/tools/: __init__.py  schedule_tools.py
src/tests/: simple_agent.py
src/tools/: __init__.py  file_tools.py
src/utils/: __init__.py  helpers.py
tests/: conftest.py  test_setup.py
tests/core/: conftest.py  test_middleware.py  test_skill_card_manager.py
tests/personal_assistant/: __init__.py  test_schedule_agent.py  test_schedule_imports.py  test_supervisor.py  test_todo_tools.py
(+22 files in other folders)
