[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-in-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.0,<9.0",
    "langchain==1.0.5",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# ============================================================================
# Ruff - Python 린터 및 포맷터 설정
# ============================================================================

[tool.ruff]
# 한 줄 최대 길이 (Black 기본값과 동일)
line-length = 88

# 타겟 Python 버전
target-version = "py313"

# 제외할 디렉토리 및 파일
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

# 린트 규칙 설정
[tool.ruff.lint]
# 활성화할 린트 규칙 (글로벌 표준)
select = [
    "E",     # pycodestyle errors (PEP 8 오류)
    "W",     # pycodestyle warnings (PEP 8 경고)
    "F",     # pyflakes (기본 에러 검사)
    "I",     # isort (import 문 자동 정렬)
    "N",     # pep8-naming (네이밍 컨벤션)
    "UP",    # pyupgrade (최신 Python 문법 자동 업그레이드)
    "B",     # flake8-bugbear (잠재적 버그 탐지)
    "C4",    # flake8-comprehensions (list/dict comprehension 최적화)
    "SIM",   # flake8-simplify (불필요하게 복잡한 코드 단순화)
    "RUF",   # Ruff 전용 규칙
]

# 무시할 규칙
ignore = [
    "E501",   # 줄 길이 초과 (formatter가 자동으로 처리)
    "B008",   # 함수 호출을 기본 인자로 사용 (FastAPI 등에서 필요)
]

# 자동 수정 가능한 규칙 (모두 활성화)
fixable = ["ALL"]

# 자동 수정하지 않을 규칙
unfixable = []

# 파일별 규칙 무시 설정
[tool.ruff.lint.per-file-ignores]
# 테스트 파일에서는 특정 규칙 무시
"tests/**/*.py" = [
    "S101",   # assert 문 사용 허용
]
# 예제 파일에서는 모듈 이름 규칙 무시
"src/examples/*.py" = [
    "N999",   # 숫자로 시작하는 파일명 허용
]

# Import 정렬 설정 (isort 호환)
[tool.ruff.lint.isort]
# import 섹션 구분
known-first-party = ["langchain_in_action"]  # 프로젝트 이름
# import 그룹 순서: 표준 라이브러리 → 서드파티 → 로컬
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# 포맷팅 설정
[tool.ruff.format]
# 문자열 따옴표 스타일
quote-style = "double"

# 들여쓰기 스타일
indent-style = "space"

# 매직 트레일링 콤마 (여러 줄 구조에서 마지막 콤마 자동 추가)
skip-magic-trailing-comma = false

# docstring 코드 예제도 포맷팅
docstring-code-format = true
